# binary_language_finder

./: README.md  pyproject.toml  results.csv  results.json  summary.json
src/langclassify/: cli.py  detectors.py  models.py  parsers.py  tools.py
src/langclassify.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_langclassify.py
